--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
           <a class="nav-link" href="/">Dashboard</a>
           <a class="nav-link" href="/courses">Courses</a>
           <a class="nav-link" href="/users">Users</a>
+          <a class="nav-link" href="/tutor">Tutor</a> </div>
         </div>
       </div>
     </nav>
